// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InsightCard snapshot (dois temas): claro 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 12,
        "padding": 16,
      },
      {
        "borderColor": "#E6E6E9",
        "borderWidth": 1,
        "elevation": 2,
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.06,
        "shadowRadius": 2,
      },
    ]
  }
>
  <View
    style={
      {
        "flexDirection": "row",
        "gap": 12,
      }
    }
  >
    <Image
      accessibilityIgnoresInvertColors={true}
      resizeMode="contain"
      source={
        {
          "testUri": "../../../assets/stickers/goal.webp",
        }
      }
      style={
        {
          "height": 40,
          "width": 40,
        }
      }
    />
    <View
      style={
        {
          "flex": 1,
          "gap": 4,
        }
      }
    >
      <Text
        maxFontSizeMultiplier={1.3}
        style={
          [
            {
              "fontFamily": "Inter-Medium",
              "fontSize": 14,
              "lineHeight": 18,
            },
            {
              "color": "#111113",
            },
            {},
            null,
          ]
        }
      >
        Meta
      </Text>
      <Text
        maxFontSizeMultiplier={1.3}
        style={
          [
            {
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
            },
            {
              "color": "#5F5F6A",
            },
            {},
            null,
          ]
        }
      >
        Faltam R$ 120,00.
      </Text>
      <View
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": false,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <View
          collapsable={false}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "borderColor": undefined,
              "borderRadius": 12,
              "borderWidth": 0,
              "justifyContent": "center",
              "minHeight": 44,
              "opacity": 1,
              "paddingHorizontal": 20,
              "transform": [
                {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <Text
            maxFontSizeMultiplier={1.3}
            style={
              [
                {
                  "fontFamily": "Inter-Medium",
                  "fontSize": 14,
                  "lineHeight": 18,
                },
                {
                  "color": "#C7186B",
                },
                {
                  "opacity": 1,
                },
                null,
              ]
            }
          >
            Ver detalhes
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`InsightCard snapshot (dois temas): escuro 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#202024",
        "borderRadius": 12,
        "padding": 16,
      },
      null,
    ]
  }
>
  <View
    style={
      {
        "flexDirection": "row",
        "gap": 12,
      }
    }
  >
    <Image
      accessibilityIgnoresInvertColors={true}
      resizeMode="contain"
      source={
        {
          "testUri": "../../../assets/stickers/goal.webp",
        }
      }
      style={
        {
          "height": 40,
          "width": 40,
        }
      }
    />
    <View
      style={
        {
          "flex": 1,
          "gap": 4,
        }
      }
    >
      <Text
        maxFontSizeMultiplier={1.3}
        style={
          [
            {
              "fontFamily": "Inter-Medium",
              "fontSize": 14,
              "lineHeight": 18,
            },
            {
              "color": "#F2F2F3",
            },
            {},
            null,
          ]
        }
      >
        Meta
      </Text>
      <Text
        maxFontSizeMultiplier={1.3}
        style={
          [
            {
              "fontFamily": "Inter-Regular",
              "fontSize": 16,
              "lineHeight": 22,
            },
            {
              "color": "#9B9BA6",
            },
            {},
            null,
          ]
        }
      >
        Faltam R$ 120,00.
      </Text>
      <View
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": false,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <View
          collapsable={false}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "borderColor": undefined,
              "borderRadius": 12,
              "borderWidth": 0,
              "justifyContent": "center",
              "minHeight": 44,
              "opacity": 1,
              "paddingHorizontal": 20,
              "transform": [
                {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <Text
            maxFontSizeMultiplier={1.3}
            style={
              [
                {
                  "fontFamily": "Inter-Medium",
                  "fontSize": 14,
                  "lineHeight": 18,
                },
                {
                  "color": "#FF4FA0",
                },
                {
                  "opacity": 1,
                },
                null,
              ]
            }
          >
            Ver detalhes
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
